/*
Copyright 2016 The Kubernetes Authors All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package k8s.io.kubernetes.pkg.apis.servicecatalog.v1alpha1;

import "k8s.io/kubernetes/pkg/api/unversioned/generated.proto";
import "k8s.io/kubernetes/pkg/api/v1/generated.proto";
import "k8s.io/kubernetes/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

message Catalog {
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;
}

message CatalogClaim {
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  optional CatalogClaimSpec spec = 2;

  optional CatalogClaimStatus status = 3;
}

message CatalogClaimList {
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  repeated CatalogClaim items = 2;
}

message CatalogClaimSpec {
  optional string catalog = 1;

  optional string entry = 2;
}

message CatalogClaimStatus {
  optional string state = 1;

  repeated k8s.io.kubernetes.pkg.api.v1.ObjectReference createdResources = 2;
}

message CatalogEntry {
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  optional string catalog = 4;

  optional string description = 3;

  optional string sourceNamespace = 5;
}

message CatalogEntryList {
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  repeated CatalogEntry items = 2;
}

message CatalogList {
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  repeated Catalog items = 2;
}

message CatalogPosting {
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  optional string catalog = 2;

  optional string description = 3;

  optional k8s.io.kubernetes.pkg.api.v1.LocalObjectReference resource = 4;
}

message CatalogPostingList {
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  repeated CatalogPosting items = 2;
}

